--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,11 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".CreateAccountMain"
+            android:exported="false"/>
+        <activity android:name=".AccountMainActivity"
+            android:exported="false"/>
+
         <activity
         android:name="com.google.android.gms.ads.AdActivity"
         android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
